// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`projectNoteHandler getTeamsMessage should match snapshot 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**sertac** replied to note _#1_ on _Manage Zeplin Connector_ screen in _Project Microsoft Teams Integration_. 🗞",
  "sections": [
    {
      "text": "cok guzel keyfimiz var",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://msteams-app.zeplin.io/zeplin/app-redirect?uri=zpl%3A%2F%2Fdot%3Fpid%3DprojectId%26sid%3DscreenId%26did%3DnoteId%26cmids%3DcommentId%26ref%3Dmicrosoft-teams%26utm_source%3Dzeplin%26utm_medium%3Dteams_integration%26utm_campaign%3Dcomment_reply"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/project/projectId/screen/screenId?did=noteId&cmid=commentId&ref=microsoft-teams&utm_source=zeplin&utm_medium=teams_integration&utm_campaign=comment_reply"
        }
      ]
    }
  ]
}
`;

exports[`projectNoteHandler getTeamsMessage should match snapshot with screen variant 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**sertac** replied to note _#1_ on _Dark_ variant of _Manage Zeplin Connector_ in _Project Microsoft Teams Integration_. 🗞",
  "sections": [
    {
      "text": "cok guzel keyfimiz var",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://msteams-app.zeplin.io/zeplin/app-redirect?uri=zpl%3A%2F%2Fdot%3Fpid%3DprojectId%26sid%3DscreenId%26did%3DnoteId%26cmids%3DcommentId%26ref%3Dmicrosoft-teams%26utm_source%3Dzeplin%26utm_medium%3Dteams_integration%26utm_campaign%3Dcomment_reply"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/project/projectId/screen/screenId?did=noteId&cmid=commentId&ref=microsoft-teams&utm_source=zeplin&utm_medium=teams_integration&utm_campaign=comment_reply"
        }
      ]
    }
  ]
}
`;
